# perception

./: .gitignore  CMakeLists.txt  package.xml
cfg/: classify.cfg  crop.cfg  downsample.cfg  segmentation.cfg  statistical_removal.cfg
data/: README
data/lidar/: README
data/rgbd/: README
include/perception/: classify.h  crop.h  downsample.h  segmentation.h  statistical_removal.h
launch/: example.launch  velodyne_perception.launch
msg/: PointCloudArray.msg  indices.msg  vector.msg
rviz/: example.rviz  velodyne_perception.rviz
src/: classify.cpp  crop.cpp  demo.cpp  downsample.cpp  segmentation.cpp  statistical_removal.cpp
